--- a/tmux.conf
+++ b/tmux.conf
@@ -151,3 +151,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded config"
 source-file ~/.tmux/style.conf
 
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/setup-tpm'
+
