Add yank/search plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -154,6 +154,8 @@ source-file ~/.tmux/style.conf
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-Plugins/tmux-copycat'
 
 run '~/.tmux/setup-tpm'
 
