Add modeline to style.conf file

--- a/style.conf
+++ b/style.conf
@@ -34,3 +34,4 @@ set -g message-style fg=colour233,bg=colour166,bold
 set -g message-command-style fg=colour232,bg=colour172,bold
 # }
 
+# vim:ft=tmux
