--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,8 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # Use 256 color terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:RGB"
 
 # Fix vim mode switching delay
 set -sg escape-time 0
